--- a/Magazin2/Magazin2/Views/CategoriesView.xaml
+++ b/Magazin2/Magazin2/Views/CategoriesView.xaml
@@ -4,9 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Magazin2.Views"
+             xmlns:converter="clr-namespace:Magazin2.Converts"
              mc:Ignorable="d" 
              d:DesignHeight="440" d:DesignWidth="780"
              Width="780" Height="440" Background="#F5F5F5">
+    <UserControl.Resources>
+        <converter:CategorieConverter x:Key="CategorieConverter"/>
+    </UserControl.Resources>
     <Canvas>
         <DockPanel Canvas.Left="10" Canvas.Top="30">
             <Canvas Width="200" Height="25">
@@ -20,6 +24,7 @@
             <StackPanel>
                 <DockPanel HorizontalAlignment="Left" Margin="0 3">
                     <TextBlock Text="name" Width="100" FontSize="12" FontWeight="Medium"/>
+                    <TextBlock Text="total amount" Width="150" FontSize="12" FontWeight="Medium"/>
                 </DockPanel>
                 <Border BorderThickness="0.2" BorderBrush="Black"/>
                 <ScrollViewer VerticalScrollBarVisibility="Auto"  Height="300">
@@ -29,6 +34,8 @@
                                 <StackPanel>
                                     <DockPanel  Margin="0 3">
                                         <TextBlock Text="{Binding NumeCategorie}" Width="100" FontSize="12" />
+                                        <TextBlock Text="{Binding Converter={StaticResource CategorieConverter}, ConverterParameter=sumTotal ,StringFormat={}{0:F2}}"
+                                                   Width="150" FontSize="12" />
                                         <DockPanel HorizontalAlignment="Right" Margin="2 0">
                                             <Button  Style="{StaticResource ImageButtonStyle}" Width="20" CommandParameter="{Binding}"
                                                  Command="{Binding DataContext.PressUpdateCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
