--- a/Magazin2/Magazin2/Views/UsersView.xaml
+++ b/Magazin2/Magazin2/Views/UsersView.xaml
@@ -18,8 +18,9 @@
                 <ComboBoxItem>None</ComboBoxItem>
                 <ComboBoxItem>Admin</ComboBoxItem>
                 <ComboBoxItem>Cashier</ComboBoxItem>
-                <DatePicker SelectedDateFormat="Short"/>
             </ComboBox>
+            <DatePicker SelectedDate="{Binding SelectedDate}"/>
+            <Button Content="Total Money" Width="100" Cursor="Hand" Command="{Binding TotalMoneyCommand}" Margin="5 0"/>
         </DockPanel>
         <Border Padding="10" CornerRadius="5" BorderThickness="1" BorderBrush="#252A34" Width="550"
                 Height="350" Canvas.Left="10" Canvas.Top="70">
@@ -40,7 +41,8 @@
                                         <TextBlock Text="{Binding Parola}" Width="100" FontSize="12" />
                                         <TextBlock Text="{Binding TipUtilizator}" Width="100" FontSize="12" />
                                         <DockPanel HorizontalAlignment="Right" Margin="2 0">
-                                            <RadioButton Margin="4" GroupName="utilizator" Cursor="Hand">
+                                            <RadioButton Margin="4" GroupName="utilizator" Cursor="Hand" CommandParameter="{Binding}"
+                                                         Command="{Binding DataContext.SelectUserCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
                                                 <RadioButton.Style>
                                                     <Style TargetType="RadioButton">
                                                         <Setter Property="Visibility" Value="Collapsed"/>
